# STEM_tools

./: .gitignore
EDS_plotting/: EDS_spectra.py
abTEM_simulations/: .gitignore  Dockerfile  README.md  TODO.md  config.toml  fph_to_tiffs.py  pyproject.toml  run.py
abTEM_simulations/abtem_run/: __init__.py  __main__.py  _estimate.py  _log.py  aggregate.py  cli.py  compat.py  config.py  extend.py  generator_run.py  job_io.py  pipeline.py  simulation.py  to_ensemble.py  worker.py
abTEM_simulations/docs/: conf.py  index.md  worker.md
abTEM_simulations/docs/api/: aggregate.md  cli.md  config.md  extend.md  generator_run.md  index.md  pipeline.md  simulation.md  to_ensemble.md  worker.md
abTEM_simulations/legacy/: hkl_equivalents.py  in_process.py
abTEM_simulations/src/abtem_run/: __init__.py  _estimate.py  _log.py  aggregate.py  cli.py  config.py  extend.py  generator_run.py  pipeline.py  simulation.py  to_ensemble.py  worker.py
abTEM_simulations/tests/: _fixtures.py  test_abtem_patches.py  test_aggregate.py  test_aggregate_series.py  test_blur_boundary.py  test_blur_sigmas.py  test_config_path_resolution.py  test_extend.py  test_generator.py  test_inplane_align.py  test_job_normalization.py  test_logging.py  test_microscope_schema.py  test_probe_defocus.py  test_run_pipeline.py  test_static_baseline.py  test_to_ensemble.py  test_vacancies_reproducibility.py  test_worker.py
abTEM_simulations/tests/phonons/: test_independent_vs_batched_divergence.py  test_phonon_reproducibility.py  test_pipeline_reproducibility.py
alignment/: batch.py  single_frame.ipynb
extras/: atom_detect.ipynb  batch.py  cif_utils.py  exp_batch_config.py  exp_batch_manifest.py  exp_batch_sweep.py  single_frame.ipynb  test_exp_batch_config.py  test_exp_batch_manifest.py  test_exp_batch_sweep.py
extras/examples/: batch_exp.toml
vector_maps/: DESIGN.md  detect_columns.ipynb  detect_columns.py  dicts_handling.py  fft_prefit.py  fit_lattice_PZT.py  fit_lattice_Si.py  fit_lattice_TaTe2.py  flyback_correct.py  plot_routines.py  readme.md  refinement_routines.py  routines.py  test_dicts_handling.py  test_fft_prefit.py  test_flyback_correct.py  test_panel.py  test_refinement_routines.py  test_routines.py  test_unit_cell_average.py  test_vmap_manifest.py  test_vmap_run.py  test_vmap_sweep.py  unit_cell_average.py  vmap_config.py  vmap_manifest.py  vmap_run.py  vmap_sweep.py
vector_maps/examples/: batch_pm3m.toml  fit_pm3m.toml  fit_reatomap.toml  fit_si.toml  fit_tate2.toml
vector_maps/legacy/: README.md  fit_lattice_PZT.py  fit_lattice_Si.py  fit_lattice_TaTe2.py  vmap_sweep.py
vector_maps/routines/: __init__.py  detect_columns.py  plot_routines.py  refinement_routines.py  routines.py  unit_cell_average.py
vector_maps/test/: test_fft_prefit.py  test_flyback_correct.py  test_panel.py  test_refinement_routines.py  test_routines.py  test_unit_cell_average.py  test_vmap_manifest.py  test_vmap_run.py  test_vmap_sweep.py
