[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "abtem-run"
version = "0.1.0"
description = "STEM/TEM image simulation pipeline built on top of abtem + ase"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Vasily A. Lebedev" },
    { name = "Ivan S. Titov" },
]
keywords = ["stem", "tem", "abtem", "ase", "multislice", "simulation", "crystallography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # Core scientific stack
    "numpy",
    "scipy",
    "matplotlib",
    "dask",
    # Microscopy / crystallography
    "abtem",
    "ase",
    "diffpy.structure",
    # Config + IO
    "pydantic>=2",
    "tomli-w",
    "zarr<3",  # abtem's to_zarr output path relies on Zarr v2 behavior
]

[project.scripts]
abtem-run = "abtem_run.cli:main"
abtem-run-worker = "abtem_run.worker:main"
abtem-run-aggregate = "abtem_run.aggregate:main"
abtem-run-to-ensemble = "abtem_run.to_ensemble:main"
abtem-run-extend = "abtem_run.extend:main"

[project.optional-dependencies]
# GPU extras are CUDA-major-version-specific because cupy and rmm ship one
# wheel per CUDA major (cupy-cuda12x vs cupy-cuda13x, etc.). Pick the extra
# that matches your installed CUDA runtime — `nvidia-smi` shows the version
# string in its header. dask-cuda is CUDA-version-agnostic.
#
# Examples:
#   pip install -e ".[gpu-cu13]"   # CUDA 13.x (current default)
#   pip install -e ".[gpu-cu12]"   # CUDA 12.x
#   pip install -e ".[gpu-cu11]"   # CUDA 11.x
#
# rmm-cu13 is not yet on PyPI as of 2026-05; cu13 users get cupy + dask-cuda
# only. The pipeline uses rmm only via the optional dask-cuda allocator path
# (cfg.gpu_related.dask_cuda = true), so this is a soft dep — falls back
# automatically when rmm is missing.
gpu-cu11 = ["cupy-cuda11x", "dask-cuda", "rmm-cu11"]
gpu-cu12 = ["cupy-cuda12x", "dask-cuda", "rmm-cu12"]
gpu-cu13 = ["cupy-cuda13x", "dask-cuda"]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7",
    "furo>=2024.0",
    "myst-parser>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests sit outside the package and need src/ on the path. When the package is
# installed via `pip install -e .` this is automatic; pythonpath here keeps
# `pytest` working from a fresh checkout without install. `tests` is added so
# the shared `_fixtures` helper module is importable from any test file.
pythonpath = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
# Permissive baseline: the codebase is partially-typed and depends on
# abtem / ase / cupy / dask which have no public type stubs. We check
# what IS annotated and trust the rest. Raise the bar (disallow_untyped_defs,
# strict_optional, etc.) once annotation coverage is broader.
ignore_missing_imports = true
warn_unused_ignores = true
# Limit scope to the package source; tests use loose abtem/numpy types
# that don't add value to type-check.
files = ["src/abtem_run"]

[project.urls]
Homepage = "https://github.com/LebedevV/STEM_tools"
Issues = "https://github.com/LebedevV/STEM_tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/abtem_run"]
